--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,9 @@ node_modules
 # Package Files #
 *.jar
 
-build/
 VoiceModule.iml
 yarn-error.log
 
-dist
-
-plugin/build
 
 # user-specific files
 local.properties
@@ -26,3 +22,8 @@ local.properties
 
 # Visual Studio Code
 .vscode/
+
+.yarn/cache/
+.yarn/unplugged/
+.yarn/build-state.yml
+.yarn/install-state.gz
